# minimalist-app

./: .dockerignore  LICENSE  Makefile  README.md  conventions.md  test.sh
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  RULES.md  alembic.ini  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_items.py  0002_create_auth.py
backend/app/: __init__.py  db.py  errors.py  logging.py  main.py  middleware.py  models.py  redis_client.py  schemas.py  settings.py
backend/app/api/: health.py
backend/app/api/v1/: __init__.py  hello.py
backend/app/auth/: __init__.py  bootstrap.py  dependencies.py  models.py  otp.py  otp_store.py  router.py  schemas.py  service.py  sessions.py
backend/app/auth/email/: __init__.py  base.py  console.py  factory.py  resend.py
backend/app/items/: __init__.py  models.py  router.py  schemas.py  service.py
backend/tests/: conftest.py  test_auth_bootstrap.py  test_auth_dependencies.py  test_auth_email_factory.py  test_auth_email_senders.py  test_auth_me_logout.py  test_auth_middleware.py  test_auth_otp_helpers.py  test_auth_otp_request.py  test_auth_otp_store.py  test_auth_otp_verify.py  test_auth_sessions.py  test_auth_test_mint_gating.py  test_auth_test_otp_fixture.py  test_boundary.py  test_health.py  test_hello.py  test_logging_callsite.py  test_logging_redaction.py  test_migration_0002_auth.py
frontend/: .gitignore  (+11 more)
tests/: .gitignore  README.md  conftest.py  pyproject.toml
tests/tests/: test_auth.py  test_errors.py  test_health.py  test_hello.py  test_request_id.py
(+75 files in other folders)
