[project]
name = "minimalist-app-tests"
version = "0.1.0"
description = "External REST functional test suite for the minimalist-app compose stack."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
